--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,8 +1,10 @@
 <html>
+
 <head>
     <title>Spring Rest api</title>
-    <link rel="stylesheet" href="/main.css"/>
+    <link rel="stylesheet" href="css/main.css" />
 </head>
+
 <body>
     <div id="app"></div>
     <script src="built/bundle.js"></script>
