--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -42,7 +42,7 @@ body {
     background-position-y: top;
     border-radius: 10px;
     padding: 8px 45px 8px 16px;
-    font-size: 20px;
+    font-size: 15px;
     color: var(--input-color);
     -webkit-appearance: none;
     border: none;
@@ -70,4 +70,14 @@ body {
   margin-right: 200px;
   margin-left: 200px;
   margin-top: -30px;
+}
+
+.btn{
+  padding: 10px;
+  background: linear-gradient(90.37deg, #3B4486 -11.13%, #9A3E3E 118.23%);
+  box-shadow: 0px 12px 12px rgba(59, 68, 134, 0.38);
+  color: #fff;
+  font-size: 1rem;
+  -webkit-text-stroke: thin;
+  border: none;
 }
